--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 spring:
   application:
     name: springsecurity6-tutorial
+  security:
+    user:
+      name: user
+      password: 1111
+      roles: USER
